--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "digitalmusicstorenodejsbff",
   "version": "1.0.0",
   "description": "DigitalMusicStoreNodeJsBff microservice using the BFF Architecture",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/t-simeongordon/DigitalMusicStoreNodeJsBff/issues"
   },
-  "homepage": "https://github.com/t-simeongordon/DigitalMusicStoreNodeJsBff#readme"
+  "homepage": "https://github.com/t-simeongordon/DigitalMusicStoreNodeJsBff#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "http": "0.0.1-security"
+  }
 }
