v0 ste up deve script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "DigitalMusicStoreNodeJsBff microservice using the BFF Architecture",
   "main": "app.js",
   "scripts": {
+    "dev": "node ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
