--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DigitalMusicStoreNodeJsBff microservice using the BFF Architecture",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon ./src/server.js",
+    "dev": "nodemon ./src/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,9 +24,14 @@
     "http": "0.0.1-security"
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/node": "^7.12.6",
+    "@babel/preset-env": "^7.12.7",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2"
   }
 }
