--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon ./src/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf ./src/build && mkdir ./src/build",
+    "build-server": "babel ./src/server/index.js --out-file ./src/build/index-compiled.js && cpy ./src/server/index.js ./src/build",
+    "build": "npm-run-all clean build-server",
+    "dev:babel": "nodemon --exec babel-node ./src/build/index.js",
+    "prod:babel": "node ./src/build/index.js"
   },
   "repository": {
     "type": "git",
@@ -28,10 +33,12 @@
     "@babel/core": "^7.12.9",
     "@babel/node": "^7.12.6",
     "@babel/preset-env": "^7.12.7",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2"
   }
 }
